--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav
+  class="navbar navbar-expand-lg px-3"
+  [ngClass]="{
+    'navbar-dark bg-dark': isDarkTheme,
+    'navbar-light bg-light': !isDarkTheme
+  }"
+>
+  <a class="navbar-brand fw-bold me-auto" href="#">SkyCast</a>
 
   <button
     class="navbar-toggler"
     type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent"
     aria-expanded="false"
     aria-label="Toggle navigation"
@@ -13,26 +19,31 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item active">
+  <div
+    class="collapse navbar-collapse justify-content-end"
+    id="navbarSupportedContent"
+  >
+    <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
+      <li class="nav-item mx-2">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-2">
         <a class="nav-link" href="#">Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-2">
         <a class="nav-link" href="#">Register</a>
       </li>
-      <li>
+      <li class="nav-item mx-2">
         <button
-          class="btn btn-sm btn-outline-secondary"
+          class="btn btn-outline-secondary"
           (click)="toggleTheme()"
+          [attr.aria-label]="
+            isDarkTheme ? 'Switch to Light Theme' : 'Switch to Dark Theme'
+          "
         >
-          {{ isDarkTheme ? "Switch to Light" : "Switch to Dark" }}
+          <i class="fas" [ngClass]="isDarkTheme ? 'fa-sun' : 'fa-moon'"></i>
         </button>
       </li>
     </ul>
-    <div class="d-flex align-items-center ms-auto"></div>
   </div>
 </nav>
