--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow-sm mb-4">
+<div class="card shadow-sm">
   <div class="card-body">
     <form (ngSubmit)="searchWeather()" class="row g-2 align-items-center">
       <div class="col-md-8">
