--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-navbar />
-<app-weather />
-<app-footer />
+<div class="d-flex flex-column min-vh-100">
+  <app-navbar></app-navbar>
+  <main class="flex-grow-1 container py-4">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
