--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     'navbar-light bg-light': !isDarkTheme
   }"
 >
-  <a class="navbar-brand fw-bold me-auto" href="#">SkyCast</a>
+  <a class="navbar-brand fw-bold me-auto" [routerLink]="['']">SkyCast</a>
 
   <button
     class="navbar-toggler"
@@ -25,13 +25,17 @@
   >
     <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
       <li class="nav-item mx-2">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active"
+          >Login</a
+        >
       </li>
       <li class="nav-item mx-2">
-        <a class="nav-link" href="#">Login</a>
-      </li>
-      <li class="nav-item mx-2">
-        <a class="nav-link" href="#">Register</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/register']"
+          routerLinkActive="active"
+          >Register</a
+        >
       </li>
       <li class="nav-item mx-2">
         <button
