--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,9 @@
 }
 
 body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  transition: background-color 0.3s, color 0.3s;
-  font-family: "Open Sans", sans-serif;
+  background-color: var(--bg-color) !important;
+  color: var(--text-color) !important;
+  font-family: "Open Sans", sans-serif !important;
 }
 
 .card,
