--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     'navbar-light bg-light': !isDarkTheme
   }"
 >
-  <a class="navbar-brand fw-bold me-auto" [routerLink]="['']">SkyCast</a>
+  <a class="navbar-brand fw-bold me-auto" [routerLink]="['']">SkyCast App</a>
 
   <button
     class="navbar-toggler"
