update navbar and footer text

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
 >
   <div class="container">
     <span [ngClass]="{ 'text-muted': !isDarkTheme, 'text-light': isDarkTheme }">
-      &copy; {{ currentYear }} Weather AI App. Built with Angular
+      &copy; {{ currentYear }} SkyCast App. Built with Angular
     </span>
   </div>
 </footer>
