--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,18 +25,38 @@
   >
     <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
       <li class="nav-item mx-2">
-        <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active"
-          >Login</a
-        >
+        <span class="nav-link text-white-50">
+          Welcome, {{ currentUserDisplayName$ | async }}
+        </span>
       </li>
-      <li class="nav-item mx-2">
-        <a
-          class="nav-link"
-          [routerLink]="['/register']"
-          routerLinkActive="active"
-          >Register</a
-        >
-      </li>
+
+      <ng-container *ngIf="(currentUserDisplayName$ | async) === 'Guest'">
+        <li class="nav-item mx-2">
+          <a
+            class="nav-link"
+            [routerLink]="['/login']"
+            routerLinkActive="active"
+            >Login</a
+          >
+        </li>
+        <li class="nav-item mx-2">
+          <a
+            class="nav-link"
+            [routerLink]="['/register']"
+            routerLinkActive="active"
+            >Register</a
+          >
+        </li>
+      </ng-container>
+
+      <ng-container *ngIf="(currentUserDisplayName$ | async) !== 'Guest'">
+        <li class="nav-item mx-2">
+          <button class="btn btn-outline-danger" (click)="logout()">
+            Logout
+          </button>
+        </li>
+      </ng-container>
+
       <li class="nav-item mx-2">
         <button
           class="btn btn-outline-secondary"
